fixed vh issue on mobile devices.

--- a/app/assets/styles/modules/components/_half-screen.css
+++ b/app/assets/styles/modules/components/_half-screen.css
@@ -1,6 +1,6 @@
 .half-screen {
-/*   height: 100vh; */
-  height: var(--vh, 100vh);
+  height: 100vh;
+  height: var(--var, 100vh);
   
   @mixin atLarge {
     width: 50vw;
